examples/test/testpolicy6909.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6909
  namespace: namespace140
spec:
  podSelector:
    matchLabels:
      key21: value30
      key25: value31
      key9: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value33
          key32: value47
      podSelector:
        matchLabels:
          key31: value13
          key49: value8
